# ioc_qp

./: .gitignore  2d_point_mass.ipynb  2dof.ipynb  CMakeLists.txt  IOC_double_integrator.ipynb  LICENSE  README.md  dg_iocqp.py  dg_mpc.py  diff_pin_costs.py  diff_qp.py  double_integrator.ipynb  double_integrator.py  ground_mpc.py  inverse_kinematics.py  inverse_qp.py  kuka_bullet_env.py  kuka_mpc.ipynb  kuka_reaching.ipynb  kuka_training.ipynb  kuka_training_2.ipynb  learning_mpc.py  meta_ik_qp.ipynb  parallel_processing.ipynb  pytorch_test.ipynb  robots.py  sphere.urdf  test.mds  twod_point_mass.py
demos/: dg_iocqp.py  dg_mpc.py  ground_mpc.py  mpc_kuka.py  obstacle1.mds  slides.odp  sphere.urdf  test.mds  torch_test.py  vicon_1.mds  vicon_2.mds
demos/pllots/: e2e_push.py  test.mds  vicon_reaching.py  vision_reaching.py
example/: test.cpp
include/: diff_qp.hpp
notebooks/: Untitled.ipynb  e2e_datagen.ipynb  e2e_eval.ipynb  e2e_learning.ipynb  e2e_training.ipynb  kuka_data.ipynb  kuka_data2.ipynb  kuka_data_gen.ipynb  kuka_data_obstacle.ipynb  kuka_eval.ipynb  kuka_evaluate.ipynb  kuka_fp.ipynb  kuka_mpc.ipynb  kuka_obstacle.ipynb  kuka_train.ipynb  kuka_train_obstacle.ipynb  kuka_training.ipynb  kuka_training_2.ipynb  weight_learning.ipynb  x_train  x_train.pt
notebooks/wandb/: latest-run
python/env/: kuka_bullet_env.py
python/vocam/: data_gen.py  diff_pin_costs.py  diff_qp.py  forward_pass.py  inverse_kinematics.py  inverse_qp.py  nets.py  qpnet.py  solver.py  vocam_forward_pass.py
src/: diff_qp.cpp
srcpy/: diff_qp.cpp
vision/: autoencoder.ipynb  data_gen.py  logger.py  object_tracking.ipynb  tmp.py  transfer_learning.ipynb
(+5 files in other folders)
